--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="page">
         <nav>
-            <img src="imagens/logo.svg" alt="logo">
+            <a href="#"><img src="imagens/logo.svg" alt="logo"></a>
 
             <ul>
                 <li><a href="#">Início</a></li>
